config/bases/cluster-api/resources/cluster/validatingwebhookconfigurations/capi-kubeadm-bootstrap-validating-webhook-configuration.yaml
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: capi-webhook-system/capi-kubeadm-bootstrap-serving-cert
  creationTimestamp: null
  labels:
    cluster.x-k8s.io/provider: bootstrap-kubeadm
  name: capi-kubeadm-bootstrap-validating-webhook-configuration
webhooks:
  - clientConfig:
      caBundle: Cg==
      service:
        name: capi-kubeadm-bootstrap-webhook-service
        namespace: capi-webhook-system
        path: /validate-bootstrap-cluster-x-k8s-io-v1alpha3-kubeadmconfig
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validation.kubeadmconfig.bootstrap.cluster.x-k8s.io
    rules:
      - apiGroups:
          - bootstrap.cluster.x-k8s.io
        apiVersions:
          - v1alpha3
        operations:
          - CREATE
          - UPDATE
        resources:
          - kubeadmconfigs
    sideEffects: None
