config/bases/cluster-api/resources/cluster/validatingwebhookconfigurations/capi-kubeadm-control-plane-validating-webhook-configuration.yaml
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: capi-webhook-system/capi-kubeadm-control-plane-serving-cert
  creationTimestamp: null
  labels:
    cluster.x-k8s.io/provider: control-plane-kubeadm
  name: capi-kubeadm-control-plane-validating-webhook-configuration
webhooks:
  - clientConfig:
      caBundle: Cg==
      service:
        name: capi-kubeadm-control-plane-webhook-service
        namespace: capi-webhook-system
        path: /validate-controlplane-cluster-x-k8s-io-v1alpha3-kubeadmcontrolplane
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validation.kubeadmcontrolplane.controlplane.cluster.x-k8s.io
    rules:
      - apiGroups:
          - controlplane.cluster.x-k8s.io
        apiVersions:
          - v1alpha3
        operations:
          - CREATE
          - UPDATE
        resources:
          - kubeadmcontrolplanes
    sideEffects: None
