config/bases/cluster-api/resources/cluster/validatingwebhookconfigurations/capi-validating-webhook-configuration.yaml
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: capi-webhook-system/capi-serving-cert
  creationTimestamp: null
  labels:
    cluster.x-k8s.io/provider: cluster-api
  name: capi-validating-webhook-configuration
webhooks:
  - clientConfig:
      caBundle: Cg==
      service:
        name: capi-webhook-service
        namespace: capi-webhook-system
        path: /validate-cluster-x-k8s-io-v1alpha3-cluster
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validation.cluster.cluster.x-k8s.io
    rules:
      - apiGroups:
          - cluster.x-k8s.io
        apiVersions:
          - v1alpha3
        operations:
          - CREATE
          - UPDATE
        resources:
          - clusters
    sideEffects: None
  - clientConfig:
      caBundle: Cg==
      service:
        name: capi-webhook-service
        namespace: capi-webhook-system
        path: /validate-cluster-x-k8s-io-v1alpha3-machine
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validation.machine.cluster.x-k8s.io
    rules:
      - apiGroups:
          - cluster.x-k8s.io
        apiVersions:
          - v1alpha3
        operations:
          - CREATE
          - UPDATE
        resources:
          - machines
    sideEffects: None
  - clientConfig:
      caBundle: Cg==
      service:
        name: capi-webhook-service
        namespace: capi-webhook-system
        path: /validate-cluster-x-k8s-io-v1alpha3-machinedeployment
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validation.machinedeployment.cluster.x-k8s.io
    rules:
      - apiGroups:
          - cluster.x-k8s.io
        apiVersions:
          - v1alpha3
        operations:
          - CREATE
          - UPDATE
        resources:
          - machinedeployments
    sideEffects: None
  - clientConfig:
      caBundle: Cg==
      service:
        name: capi-webhook-service
        namespace: capi-webhook-system
        path: /validate-cluster-x-k8s-io-v1alpha3-machinehealthcheck
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validation.machinehealthcheck.cluster.x-k8s.io
    rules:
      - apiGroups:
          - cluster.x-k8s.io
        apiVersions:
          - v1alpha3
        operations:
          - CREATE
          - UPDATE
        resources:
          - machinehealthchecks
    sideEffects: None
  - clientConfig:
      caBundle: Cg==
      service:
        name: capi-webhook-service
        namespace: capi-webhook-system
        path: /validate-cluster-x-k8s-io-v1alpha3-machineset
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validation.machineset.cluster.x-k8s.io
    rules:
      - apiGroups:
          - cluster.x-k8s.io
        apiVersions:
          - v1alpha3
        operations:
          - CREATE
          - UPDATE
        resources:
          - machinesets
    sideEffects: None
  - clientConfig:
      caBundle: Cg==
      service:
        name: capi-webhook-service
        namespace: capi-webhook-system
        path: /validate-exp-cluster-x-k8s-io-v1alpha3-machinepool
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validation.exp.machinepool.cluster.x-k8s.io
    rules:
      - apiGroups:
          - exp.cluster.x-k8s.io
        apiVersions:
          - v1alpha3
        operations:
          - CREATE
          - UPDATE
        resources:
          - machinepools
    sideEffects: None
  - clientConfig:
      caBundle: Cg==
      service:
        name: capi-webhook-service
        namespace: capi-webhook-system
        path: /validate-addons-cluster-x-k8s-io-v1alpha3-clusterresourceset
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validation.clusterresourceset.addons.cluster.x-k8s.io
    rules:
      - apiGroups:
          - addons.cluster.x-k8s.io
        apiVersions:
          - v1alpha3
        operations:
          - CREATE
          - UPDATE
        resources:
          - clusterresourcesets
    sideEffects: None
